--- a/1-Natours/index.html
+++ b/1-Natours/index.html
@@ -1,11 +1,13 @@
-<html>
+<html lang="en">
 <head>
     <title>Natours</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header class="header">
-        Hello world...
+        <div class="logo-box">
+            <img class="logo" src="./images/logo-white.png" alt="logo">
+        </div>
     </header>
 </body>
 </html>
