--- a/1-Natours/index.html
+++ b/1-Natours/index.html
@@ -4,10 +4,16 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <header class="header">
-        <div class="logo-box">
-            <img class="logo" src="./images/logo-white.png" alt="logo">
-        </div>
-    </header>
+<header class="header">
+    <div class="logo-box">
+        <img class="logo" src="./images/logo-white.png" alt="logo">
+    </div>
+    <div class="text-box">
+        <h1 class="heading-primary">
+            <span class="heading-primary-main">OUTDOORS</span>
+            <span class="heading-primary-sub">IS WHERE LIFE HAPPENS</span>
+        </h1>
+    </div>
+</header>
 </body>
 </html>
